@@ -26,7 +26,7 @@ import tech.pegasys.teku.spec.config.SpecConfigAltair;
 import tech.pegasys.teku.spec.config.SpecConfigBellatrix;
 import tech.pegasys.teku.spec.config.SpecConfigCapella;
 import tech.pegasys.teku.spec.config.SpecConfigDeneb;
-import tech.pegasys.teku.spec.config.SpecConfigEip7594;
+import tech.pegasys.teku.spec.config.SpecConfigElectra;
 
 public enum SpecMilestone {
   PHASE0,
@@ -34,7 +34,7 @@ public enum SpecMilestone {
   BELLATRIX,
   CAPELLA,
   DENEB,
-  EIP7594;
+  ELECTRA;
 
   /**
    * Returns true if this milestone is at or after the supplied milestone ({@code other})
@@ -46,13 +46,21 @@ public enum SpecMilestone {
     return compareTo(other) >= 0;
   }
 
+  public boolean isGreaterThan(final SpecMilestone other) {
+    return compareTo(other) > 0;
+  }
+
+  public boolean isLessThanOrEqualTo(final SpecMilestone other) {
+    return compareTo(other) <= 0;
+  }
+
   /** Returns the milestone prior to this milestone */
   public SpecMilestone getPreviousMilestone() {
     if (equals(PHASE0)) {
       throw new IllegalArgumentException("There is no milestone prior to Phase0");
     }
     final List<SpecMilestone> priorMilestones = getAllPriorMilestones(this);
-    return priorMilestones.get(priorMilestones.size() - 1);
+    return priorMilestones.getLast();
   }
 
   /**
@@ -108,28 +116,26 @@ public enum SpecMilestone {
     return switch (milestone) {
       case PHASE0 -> Optional.of(specConfig.getGenesisForkVersion());
       case ALTAIR -> specConfig.toVersionAltair().map(SpecConfigAltair::getAltairForkVersion);
-      case BELLATRIX -> specConfig
-          .toVersionBellatrix()
-          .map(SpecConfigBellatrix::getBellatrixForkVersion);
+      case BELLATRIX ->
+          specConfig.toVersionBellatrix().map(SpecConfigBellatrix::getBellatrixForkVersion);
       case CAPELLA -> specConfig.toVersionCapella().map(SpecConfigCapella::getCapellaForkVersion);
       case DENEB -> specConfig.toVersionDeneb().map(SpecConfigDeneb::getDenebForkVersion);
-      case EIP7594 -> specConfig.toVersionEip7594().map(SpecConfigEip7594::getEip7594ForkVersion);
+      case ELECTRA -> specConfig.toVersionElectra().map(SpecConfigElectra::getElectraForkVersion);
     };
   }
 
   static Optional<UInt64> getForkEpoch(final SpecConfig specConfig, final SpecMilestone milestone) {
     return switch (milestone) {
       case PHASE0 ->
-      // Phase0 can only ever start at epoch 0 - no non-zero slot is valid. However, another fork
-      // may also be configured to start at epoch 0, effectively overriding phase0
-      Optional.of(UInt64.ZERO);
+          // Phase0 can only ever start at epoch 0 - no non-zero slot is valid. However, another
+          // fork may also be configured to start at epoch 0, effectively overriding phase0
+          Optional.of(UInt64.ZERO);
       case ALTAIR -> specConfig.toVersionAltair().map(SpecConfigAltair::getAltairForkEpoch);
-      case BELLATRIX -> specConfig
-          .toVersionBellatrix()
-          .map(SpecConfigBellatrix::getBellatrixForkEpoch);
+      case BELLATRIX ->
+          specConfig.toVersionBellatrix().map(SpecConfigBellatrix::getBellatrixForkEpoch);
       case CAPELLA -> specConfig.toVersionCapella().map(SpecConfigCapella::getCapellaForkEpoch);
       case DENEB -> specConfig.toVersionDeneb().map(SpecConfigDeneb::getDenebForkEpoch);
-      case EIP7594 -> specConfig.toVersionEip7594().map(SpecConfigEip7594::getEip7594ForkEpoch);
+      case ELECTRA -> specConfig.toVersionElectra().map(SpecConfigElectra::getElectraForkEpoch);
     };
   }
 
